--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
     <string name="app_name">pumpItUp</string>
+    <string name="btn_addStation">Add Placemark</string>
+
+    <string name="hint_station_name">Station Name</string>
+    <string name="hint_petrol_price">Petrol Price</string>
+    <string name="hint_diesel_price">Diesel Price</string>
+    <string name="hint_eircode">Eircode</string>
+    <string name="hint_address">Address</string>
+
+
+    <string name="title_pump_activity_list">PumpListActivity</string>
+
+    <string name="menu_addPump">Add</string>
+    <string name="activity_cancelAddPump">Cancel</string>    //Cancel Button when on main activity
+
+
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
