--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">pumpItUp</string>
-    <string name="btn_addStation">Add Placemark</string>
+    <string name="app_name">PumpItUp</string>
+    <string name="btn_addStation">Add Station</string>
 
     <string name="hint_station_name">Station Name</string>
     <string name="hint_petrol_price">Petrol Price</string>
