--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,19 +8,21 @@
     <string name="hint_eircode">Eircode</string>
     <string name="hint_address">Address</string>
 
-
     <string name="title_pump_activity_list">PumpListActivity</string>
 
     <string name="menu_addPump">Add</string>
     <string name="activity_cancelAddPump">Cancel</string>    //Cancel Button when on main activity
 
 
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string-array name="stationNames">
+        <item> Amber </item>
+        <item> Apple Green </item>
+        <item> Circle K </item>
+        <item> Inver </item>
+        <item> Morris </item>
+        <item> Shell </item>
+        <item> Texaco </item>
+        <item> Top Oil </item>
+        <item> Emo </item>
+    </string-array>
 </resources>
