--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,11 @@
     <string name="title_pump_activity_list">PumpListActivity</string>
 
     <string name="menu_addPump">Add</string>
-    <string name="activity_cancelAddPump">Cancel</string>    //Cancel Button when on main activity
+    <string name="activity_cancelAddPump">Cancel</string>
+
+    //Cancel Button when on main activity
+    <string name="edit_activity"> Save Station</string>
+    <string name="enter_station_title"> Please enter a Station Title </string>
 
 
     <string-array name="stationNames">
@@ -25,4 +29,12 @@
         <item> Top Oil </item>
         <item> Emo </item>
     </string-array>
+    <string name="email_text">Email </string>
+    <string name="password_text">Password</string>
+    <string name="signin_text">Sign In</string>
+    <string name="login_text">Login</string>
+    <string name="logout_text">Logout</string>
+    <string name="welcome_text">Welcome to PumpItUp! \n</string>
+    <string name="welcome_text2">Here is a list of you Stations \n</string>
+    <string name="title_activity_display">DisplayActivity</string>
 </resources>
