--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,5 @@
     <string name="welcome_text2">Here is a list of you Stations \n</string>
     <string name="title_activity_display">DisplayActivity</string>
 
-    <string name="my_spinner_hint">Address</string>
+    <string name="search">Search...</string>
 </resources>
