--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="title_activity_display">DisplayActivity</string>
 
     <string name="search">Search...</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
