--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,28 @@
     <string name="welcome_text2">Here is a list of you Stations \n</string>
     <string name="title_activity_display">DisplayActivity</string>
 
-    <string name="search">Search...</string>
+    <string name="search">Search</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_nav_drawer_main">NavDrawerMain</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_stations_list">Stations List</string>
+    <string name="menu_map">Map</string>
+    <string name="menu_out">Log Out</string>
+
+
+    <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="menu_drawer_open">Drawer Open</string>
+    <string name="menu_drawer_close">Drawer Closed</string>
+
+
+
+
+
 </resources>
