Map Activity is working. Need to do the exercises like adding more fields to Map model and getting the lat and long to change when marker is moved. Also need to get rid of the Nav Drawer using the activites and create fragments instead. This will be my last commit until I can fix the nav drawer with fragments.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,8 +58,8 @@
     <string name="menu_drawer_open">Drawer Open</string>
     <string name="menu_drawer_close">Drawer Closed</string>
 
-
-
+    <string name="button_location">Set Location</string>
+    <string name="title_activity_map">MapActivity</string>
 
 
 </resources>
