--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,14 @@
     <string name="hint_eircode">Eircode</string>
     <string name="hint_address">Address</string>
 
-    <string name="title_pump_activity_list">PumpListActivity</string>
-    <string name="title_pump_activity_main">MainActivity</string>
+    <string name="title_pump_activity_list">Pump List</string>
+    <string name="title_pump_activity_main">Add Station</string>
 
 
+    <string name="menu">Menu</string>
     <string name="menu_addPump">Add</string>
     <string name="activity_cancelAddPump">Cancel</string>
+    <string name="menu_addMapLoc">Map</string>
 
     //Cancel Button when on main activity
     <string name="edit_activity"> Save Station</string>
@@ -41,14 +43,8 @@
     <string name="title_activity_display">DisplayActivity</string>
 
     <string name="search">Search</string>
-    <string name="title_activity_maps">MapsActivity</string>
-    <string name="title_activity_nav_drawer_main">NavDrawerMain</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_activity_maps">Maps</string>
+
 
     <string name="menu_main">Add Stations</string>
     <string name="menu_stations_list">Stations List</string>
@@ -65,6 +61,10 @@
     <string name="button_location">Set Location</string>
     <string name="title_activity_map">MapActivity</string>
     <string name="title_activity_nav">NavActivity</string>
+    <string name="title_activity_pump_map">Pump It Up Map</string>
+
+    <string name="sign_up_text"><u>Don\'t have an account? Sign Up here</u></string>
+    <string name="forgot_password_text"><u>Forgotten Password</u></string>
 
 
 
